--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background: url("/banner.jpg"), linear-gradient(135deg, #1f1f1f, #2d2d2d);
+    background: linear-gradient(135deg, #1f1f1f00, #2d2d2d80), url("/banner.jpg");
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
